2013-06-24 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_visual_map.php: fixed the links of module
	graphs into public visualmap.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-24 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_visual_map.php,
	operation/agentes/status_monitor.php: fixed the links to the items
	that represents modules.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-24 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.js: fixed the
	removed the relantionship between items.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-24 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.js: fixed the
	moving the lines when the item is a graph.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-24 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php: fixed the color of
	lines in the editor.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-24 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.js,
	godmode/reporting/visual_console_builder.editor.php,
	include/functions_visual_map_editor.php: changed the code to show
	the list of parent in the select, now this selectbox doesn't show
	the same item.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-20 Mario Pulido <mario.pulido@artica.es>

	*include/help/es/help_module_tokens.php
        include/help/en/help_module_tokens.php:Added new help

2013-06-20 Miguel de Dios <miguel.dedios@artica.es>

	* include/graphs/functions_pchart.php: fixed the graphs with all
	values in negative Y axis. Now it shows correct.
	
	Fixes: #2302
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-20 Miguel de Dios <miguel.dedios@artica.es>

	* include/graphs/fgraph.php, include/graphs/functions_pchart.php:
	merged the changes from the branch 4.

2013-06-20 Miguel de Dios <miguel.dedios@artica.es>
